solc_mutator_ossfuzz_seed_corpus/test_sol/test_d7e4bb545af7f205f0c0d9fe2c5deb02f6938e7a810e8facc856e2bea26500d7_da6d63e7a6a3529a87f05e9f93d2ef1254bffbe6_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0(bool i0,uint40[2] memory i1,address payable i2) external    returns(string memory o0,function (bytes18, int184[1] memory, int32) external   returns (address, function () external   returns (bool, int200)[2] memory, bytes26) o1)
  {
  }
  function f1(bytes13 i0) private    returns(uint40 o0)
  {
  }
  event ev0(function (int128) internal    ep0) anonymous;
  event ev1(uint16  ep0);
  type T0 is bytes15;
}
using L0 for uint;
error er0();
using L0 for uint;
using L0 for uint;
using L0 for uint;
struct St0 {
  bool el0;
  L0.T0 el1;
}
error er1();
pragma solidity >= 0.0.0;
using L0 for uint;
// ----
// TypeError 3417: (su0.sol:339-372): Internal or recursive type is not allowed as event parameter type.
